--- a/platform_code/assessment/templates/assessment/organisation/organisation.html
+++ b/platform_code/assessment/templates/assessment/organisation/organisation.html
@@ -43,7 +43,7 @@
             </li>
         </ul>
     </div>
-    <div class="data-nav-pills">
+    <div class="data-nav-pills margin-auto">
         <div class="tab-content" id="PillProfileContent">
 
             <div aria-labelledby="tab-eval" class="tab-pane active large-array-large-screen margin-left-large-screen"
