--- a/platform_code/templates/admin/base_site.html
+++ b/platform_code/templates/admin/base_site.html
@@ -16,8 +16,8 @@
         Admin panel
     </a>
 
-    <a href="{% url 'admin-dashboard:dashboard' %}">
-        - Dashboard
+    <a href="{% url 'admin-monitoring:monitoring' %}">
+        - Monitoring
     </a>
 </h1>
 {% endblock %}
