--- a/platform_code/assessment/templates/assessment/results.html
+++ b/platform_code/assessment/templates/assessment/results.html
@@ -86,7 +86,7 @@
     <div class="row">
         <form action="{% url 'assessment:orga-summary' organisation.id %}" class="float-left margin-auto">
             <input class="btn btn-primary button-190-or-220" type="submit"
-                   value="{% trans 'Back to the organisation summary' %}"/>
+                   value="{% trans 'Back to organisation' %}"/>
         </form>
 
         <form action="{{ evaluation.get_absolute_url }}" class="float-right margin-auto smartphone-margin-top">
@@ -102,48 +102,59 @@
         <h2>{% trans "Your answers" %}</h2>
         <!--    Need to create a new form, initiate with database, disable other choices-->
         {% for element in evaluation_element_list %}
-        {% if element.master_evaluation_element.order_id == 1 %}
-        <p>Section {{ element.section.master_section.order_id}}. {{ element.section.master_section.name }}
-        </p>
-        {% endif %}
-        <div class="card ">
-            <div class="card-header card-headers-results row" id="heading{{element.id}}">
-                <p>Q{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}} :
-                    {{element.master_evaluation_element.name}}
-                </p>
-            </div>
-            <div class="card-content">
-                {% if element.has_condition_on and element|is_not_applicable %}
-                <div class='alert alert-warning' id="warningmessage{{element.id}}">
-                    {% trans 'You are not concerned by this evaluation element' %}
+            {% if element.master_evaluation_element.order_id == 1 %}
+                <h3 class="margin-30">
+                    Section {{ element.section.master_section.order_id}}. {{ element.section.master_section.name }}
+                </h3>
+                {% for field in dic_form_results|get_item:element.section %}
+                    <div class="section-notes-results">
+                        <label class="margin-left-20 margin-10">{{ field.label }}</label>
+                        {{ field }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+
+            <div class="card ">
+                <div class="card-header card-headers-results row" id="heading{{element.id}}">
+                    <p>Q{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}} :
+                        {{element.master_evaluation_element.name}}
+                    </p>
                 </div>
-                {% endif %}
-                <div class="question-name margin-all-20" id="question-name">
-                    Q{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
-                    {% trans ":" %}
-                    {{element.master_evaluation_element.question_text}}
+                <div class="card-content">
+                    {% if element.has_condition_on and element|is_not_applicable %}
+                    <div class='alert alert-warning' id="warningmessage{{element.id}}">
+                        {% trans 'You are not concerned by this evaluation element' %}
+                    </div>
+                    {% endif %}
+                    <div class="question-name margin-all-20" id="question-name">
+                        Q{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
+                        {% trans ":" %}
+                        {{element.master_evaluation_element.question_text}}
+                    </div>
+                    {% if element.master_evaluation_element.question_type == "radio" %}
+                    <p class="italic margin-all-20">
+                        R{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
+                        {% trans ": Please select one answer which best matches to your organisation situation" %}
+                    </p>
+
+                    {% elif element.master_evaluation_element.question_type == "checkbox"%}
+                    <p class="italic margin-all-20">
+                        R{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
+                        {% blocktrans trimmed %}
+                        : Please select all the answers which best match to your organisation situation. Be
+                        careful, some combinations are not coherent.
+                        {% endblocktrans %}
+                    </p>
+
+                    {% endif %}
+
+                    {% for field in dic_form_results|get_item:element %}
+                    <label class="margin-left-20">{{ field.label }}</label>
+                        {{ field }}
+                    {% endfor %}
+
                 </div>
-                {% if element.master_evaluation_element.question_type == "radio" %}
-                <p class="italic margin-all-20">
-                    R{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
-                    {% trans ": Please select one answer which best matches to your organisation situation" %}
-                </p>
-
-                {% elif element.master_evaluation_element.question_type == "checkbox"%}
-                <p class="italic margin-all-20">
-                    R{{element.section.master_section.order_id}}.{{element.master_evaluation_element.order_id}}
-                    {% blocktrans trimmed %}
-                    : Please select all the answers which best match to your organisation situation. Be
-                    careful, some combinations are not coherent.
-                    {% endblocktrans %}
-                </p>
-
-                {% endif %}
-
-                {{ dic_form_results|get_item:element }}
-
             </div>
-        </div>
         {% endfor %}
     </div>
     <div>
