--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -847,56 +847,6 @@ h1 img {
 
 /**************************************** END RELEASE NOTES **************************************************/
 
-/****************************************** BETA BANNER ******************************************************/
-
-.ribbon {
-  position: absolute;
-  left: -5px;
-  margin-top: 2px;
-  z-index: 1;
-  overflow: hidden;
-  width: 75px; height: 75px;
-  text-align: right;
-  margin-left: 10px;
-}
-
-.ribbon span {
-  font-size: 10px;
-  font-weight: bold;
-  color: #FFF;
-  text-transform: uppercase;
-  text-align: center;
-  line-height: 20px;
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  width: 100px;
-  display: block;
-  background: linear-gradient(#FF7364 0%, #CF5D51 100%);
-  box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
-  position: absolute;
-  top: 19px; left: -21px;
-}
-.ribbon span::before {
-  content: "";
-  position: absolute; left: 0px; top: 100%;
-  z-index: -1;
-  border-left: 3px solid #CF5D51;
-  border-right: 3px solid transparent;
-  border-bottom: 3px solid transparent;
-  border-top: 3px solid #CF5D51;
-}
-.ribbon span::after {
-  content: "";
-  position: absolute; right: 0px; top: 100%;
-  z-index: -1;
-  border-left: 3px solid transparent;
-  border-right: 3px solid #CF5D51;
-  border-bottom: 3px solid transparent;
-  border-top: 3px solid #CF5D51;
-}
-
-/******************************************* END BETA BANNER ************************************************/
-
 /******************************************* OTHER BANNERS *************************************************/
 
 .homepage-banner{
@@ -934,9 +884,7 @@ h1 img {
 /********************************************* NAVBAR *******************************************************/
 
 .navbar {
-    /* margin-bottom: 60px; */
     border-bottom: solid lightgrey;
-    margin-left: 10px;
     padding-top: 20px;
     padding-bottom: 0;
 }
@@ -955,7 +903,8 @@ h1 img {
 }
 
 .navbar>.container {
-    max-width: 90%;
+    max-width: 95%;
+    margin-left: 0;
 }
 
 .topnav .icon {
